--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <body>
   <header>
     <h1>GNA UNIVERSITY</h1>
-    <p>North Mess Menu</p>
+    <p>North-India Mess Menu</p>
   </header>
   
   <div class="container">
